--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-leaflet": "^2.6.1",
-    "react-scripts": "3.4.0"
+    "react-leaflet-search": "^1.0.3",
+    "react-scripts": "3.4.0",
+    "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
