--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "json-loader": "^0.5.7",
     "leaflet": "^1.6.0",
     "react": "^16.13.0",
     "react-date-picker": "^7.10.0",
