--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "leaflet": "^1.6.0",
+    "leaflet-draw": "^1.0.4",
     "react": "^16.13.0",
     "react-date-picker": "^7.10.0",
     "react-dom": "^16.13.0",
     "react-dropzone": "^10.2.1",
     "react-geolocated": "^3.0.1",
     "react-leaflet": "^2.6.1",
+    "react-leaflet-draw": "^0.19.0",
     "react-leaflet-search": "^1.0.3",
     "react-scripts": "3.4.0",
     "react-twitter-embed": "^3.0.3"
